--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # bloc: ^8.1.0
-  dots_indicator: ^2.1.0
-  get: ^4.6.5
+  dots_indicator: ^2.0.0
+  get: ^4.1.4
   shared_preferences: ^2.0.11
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
