--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # bloc: ^8.1.0
-  dots_indicator: ^2.0.0
   get: ^4.1.4
+  dots_indicator: ^2.0.0
   shared_preferences: ^2.0.11
   intl: ^0.17.0
+  google_maps_flutter: ^2.1.2
+  geocoding: ^2.0.4
+  geolocator: ^8.2.0
 
 dev_dependencies:
   flutter_test:
